force-app/main/default/objects/Bypass_Validation_Rules__c/Bypass_Validation_Rules__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Bypass Validation rules</label>
</CustomObject>