force-app/main/default/objects/Bypass_Validation_Rules__c/fields/Opportunity_Flow__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Flow</label>
    <type>Checkbox</type>
</CustomField>