force-app/main/default/objects/Bypass_Validation_Rules__c/fields/Skip_Case_Subject_Validation__c.field-meta.xml
<CustomField>
    <fullName>Skip_Case_Subject_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Case Subject Validation</label>
    <type>Checkbox</type>
</CustomField>